--- a/teste.html
+++ b/teste.html
@@ -5,14 +5,11 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title>Test</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-    <p>Go to the <a href="teste.html">Test</a></p>
+    <h1>Test</h1>
+    <p>Content</p>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
